# varzesh3-scraper

./: Cargo.toml
src/: main.rs
src/standing/: carve.rs  data.rs  mod.rs  result.rs
src/utils/: article.rs  carve.rs  mod.rs  news.rs
