[package]
name = "varzesh3-scraper"
version = "0.1.0"
authors = ["Masood Rezazadeh <rezazadehmasood@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
reqwest = { version = "0.11", features = ["json", "gzip", "cookies", "blocking"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = ""
alfred = "4.0.2"
eyre = "0.3"
